# rss-lite

./: .geminiignore  LICENSE  README.md
backend/: .env.sample  .gitignore  main.py  pyproject.toml
backend/app/: feed_utils.py
backend/docs/: requirements_definition.md  tasks.md
backend/scripts/: ingest.py
frontend/app/templates/: index.html  login.html
